feat: repository query join feature complete