@@ -149,12 +149,12 @@ public class SqlTplDynamicExecutorTest3 extends JdbcTestBase {
         PaginationResults<User> us = userMapper.selectByAge2Page(10, 0, limit);
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
 
         us = userMapper.selectByAge2Page(10, page);
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
     }
 
     @Test
@@ -176,13 +176,13 @@ public class SqlTplDynamicExecutorTest3 extends JdbcTestBase {
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
 
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
 
         us = userMapper.select2Page(0, limit);
         System.out.println(us.getResultSize());
         System.out.println(us.getPageResults());
 
-        assertEquals(us.getResultSize(), new Integer(limit));
+        assertEquals(us.getResultSize(), Integer.valueOf(limit));
 
     }
 }
